Fix spacing for the homepage project banner and the project cards.

--- a/src/styles/layout/project-banner.module.css
+++ b/src/styles/layout/project-banner.module.css
@@ -1,13 +1,15 @@
 .banner {
-    padding-top: 2rem;
+    padding-top: .5rem;
     min-height: 250px;
     background-color: #F2F2F2;
     box-shadow: 0 -20px 20px #00000052;
+    margin-bottom: 2rem;
 }
 
 .text {
     flex-grow: 1;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .buttonWrapper {
@@ -18,6 +20,7 @@
     margin-right: auto;
 
     margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .banner article {
