--- a/src/styles/layout/project-card.module.css
+++ b/src/styles/layout/project-card.module.css
@@ -67,6 +67,6 @@
 
 @media (min-width: 850px) {
     .cardBox {
-        margin-right: 1rem;
+        margin-right: 2rem;
     }
 }
